--- a/2.13/Dockerfile.amd64
+++ b/2.13/Dockerfile.amd64
@@ -58,7 +58,7 @@ apt-get update \
 && apt-key add 7fa2af80.pub \
 && apt-get install ./cuda-repo-ubuntu1804_10.1.168-1_amd64.deb \
 && apt-get update \
-&& apt-get -y --no-install-recommends install cuda-runtime-10-1 \
+&& DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install cuda-runtime-10-1 \
 && rm -rf /var/lib/apt/lists/* \
 && chmod +x /usr/local/bin/xmrig-nvidia \
 && rm -r *
